# LeetCodeMe

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  generate_template
C/: CMakeLists.txt
C/include/: CMakeLists.txt  common.h  leetcode_functions.h  mystr.h
C/src/: 0010_regular-expression-matching.c  0014_longest-common-prefix.c  0015_3sum.c  0016_3sum-closest.c  0020_valid-parentheses.c  0025_reverse-nodes-in-k-group.c  0041_first-missing-positive.c  0065_valid-number.c  0067_add-binary.c  0068_lru-cache.c  0076_minimum-window-substring.c  0080_climbing-stairs.c  0084_largest-rectangle-in-histogram.c  0126_word_ladder_ii.c  0155_min-stack.c  0198_house-robber.c  0236_lowest-common-ancestor-of-a-binary-tree.c  0297_serialize-and-deserialize-binary-tree.c  0646_maximum-length-of-pair-chain.c  1014_best-sightseeing-pair.c  1300_sum-of-mutated-array-closest-to-target.c  common.c  ms029_shun-shi-zhen-da-yin-ju-zhen-lcof.c  ms046_ba-shu-zi-fan-yi-cheng-zi-fu-chuan-lcof.c  mystr.c
C/test/: main_test.c  test_0002.c  test_str.c  units_all.h
C/tests/: main_test.c  ms_test_029.c  ms_test_046.c  ms_test_064.c  test_0002.c  test_0004.c  test_0005.c  test_0007.c  test_0009.c  test_0010.c  test_0014.c  test_0015.c  test_0016.c  test_0020.c  test_0025.c  test_0026.c  test_0028.c  test_0041.c  test_0050.c  test_0065.c  test_0069.c  test_0076.c  test_0084.c  test_0098.c  test_0101.c  test_0102.c  test_0105.c  test_0124.c  test_0125.c  test_0126.c  test_0128.c  test_0136.c  test_0139.c  test_0152.c  test_0198.c  test_0209.c  test_0210.c  test_0221.c  test_0236.c  test_0238.c  (+19 more)
Go/: 191_number-of-1-bits.go  common_tools.go  convey_test.go  go.sum  gocheck_hello_test.go  gocheck_test.go
Java/: pom.xml
MySQL/: 01097_game-play-analysis-v.sql  0175_combine-two-tables.sql  0176_second-highest-salary.sql  0177_nth-highest-salary.sql  0178_rank-scores.sql  0180_consecutive-numbers.sql  0181_employees-earning-more-than-their-managers.sql  0182_duplicate-emails.sql  0183_customers-who-never-order.sql  0184_department-highest-salary.sql  0185_department-top-three-salaries.sql  0196_delete-duplicate-emails.sql  0197_rising-temperature.sql  0262_trips-and-users.sql  0511_game-play-analysis-i.sql  0512_game-play-analysis-ii.sql  0534_game-play-analysis-iii.sql  0550_game-play-analysis-iv.sql  0569_median-employee-salary.sql  0570_managers-with-at-least-5-direct-reports.sql  0571_find-median-given-frequency-of-numbers.sql  0574_winning-candidate.sql  0577_employee-bonus.sql  0578_get-highest-answer-rate-question.sql  0579_find-cumulative-salary-of-an-employee.sql  0580_count-student-number-in-departments.sql  0584_find-customer-referee.sql  0585_investments-in-2016.sql  0586_customer-placing-the-largest-number-of-orders.sql  0595_big-countries.sql  0596_classes-more-than-5-students.sql  0597_friend-requests-i-overall-acceptance-rate.sql  0601_human-traffic-of-stadium.sql  0602_friend-requests-ii-who-has-the-most-friends.sql  0603_consecutive-available-seats.sql  0607_sales-person.sql  0608_tree-node.sql  0610_triangle-judgement.sql  0612_shortest-distance-in-a-plane.sql  0613_shortest-distance-in-a-line.sql  (+83 more)
Shell/: 0192_word-frequency.sh  0193_valid-phone-numbers.sh  0194_transpose-file.sh  0195_tenth-line.sh
docs/: notes.md
include/: CMakeLists.txt  common.h  leetcode_functions.h
python/: .editorconfig  0001_two-sum.py  0002_add-two-numbers.py  0003.longest-substring-without-repeating-characters.py  0003_longest-substring-without-repeating-characters.py  0004_median-of-two-sorted-arrays.py  0005_longest-palindromic-substring.py  0007_reverse-integer.py  0008_string-to-integer-atoi.py  0009.palindrome-number.py  0009_palindrome-number.py  0010_regular-expression-matching.py  0011_container-with-most-water.py  0012_integer-to-roman.py  0013_roman-to-integer.py  0014_longest-common-prefix.py  0015.3sum-closet.py  0015.3sum.py  0015_3sum.py  0016_3sum-closet.py  0017_letter-combinations-of-a-phone-number.py  0018_4sum.py  (+1217 more)
test/: CMakeLists.txt  ms_test_029.cpp  ms_test_046.cpp  ms_test_064.cpp  test_0002.cpp  test_0004.cpp  test_0005.cpp  test_0007.cpp  test_0009.cpp  test_0010.cpp  test_0014.cpp  test_0015.cpp  test_0016.cpp  test_0020.cpp  test_0025.cpp  test_0026.cpp  test_0028.cpp  test_0041.cpp  test_0050.cpp  test_0065.cpp  test_0067.cpp  test_0069.cpp  test_0076.cpp  test_0084.cpp  test_0098.cpp  test_0101.cpp  test_0102.cpp  test_0105.cpp  test_0124.cpp  test_0125.cpp  test_0126.cpp  test_0128.cpp  test_0136.cpp  test_0139.cpp  test_0152.cpp  test_0198.cpp  test_0209.cpp  test_0210.cpp  test_0221.cpp  test_0236.cpp  (+16 more)
(+1001 files in other folders)
